# test_crewai

holmes/: README.md  pyproject.toml
holmes/src/holmes/: crew.py  main.py
